UI improvements: active song highlight, player improvements,scrollbar styling, responsiveness fixes

--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@ body {
 .left {
     width: 300px;
     max-width: 25vw;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .right {
@@ -259,10 +261,27 @@ body {
     padding: 16px;
     cursor: pointer;
     margin-top: -20px;
+    transition: 0.2s;
     /* border: 0.5px solid white;
     border-radius: 5px;
     margin: 3px;
     padding: 3px */
+}
+.songlist li.active{
+    background-color: #1db954;
+    color: #000;
+    border-radius: 999px;
+    padding:12px 16px;
+}
+.songlist li{
+    transition: all 0.2s ease;
+}
+.songlist li.active:hover{
+    background: #1ed760;
+    border-radius: 999px;
+}
+.songlist li:hover{
+    background: #2a2a2a;
 }
 
 /* .songlist ul li :hover{
@@ -438,23 +457,11 @@ body {
 .volume{
     width:100px;
 }
-/* .seekbar{
-    height:6px;
-    background:#555;
-    width:90%;
-    position:absolute;
-    bottom:10px;
-    border-radius:10px;
-    cursor:pointer;
+.songinfo{
+    color: white;
+    font-size: 14px;
+    width: 200px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
-
-.circle{
-    width:14px;
-    height:14px;
-    background:white;
-    border-radius:50%;
-    position:absolute;
-    top:-4px;
-    left:0;
-    transition:left 0.1s;
-} */
